# fintwit-rag

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy-front.yml
ec2/: user_data.sh
lambda/: build-layer.sh  pytest.ini  requirements.txt
lambda/src/: config.py  embeddings.py  handler.py  llm.py  vector_store.py
lambda/src/prompts/: system_prompt.txt  user_prompt.txt
lambda/tests/integration/: conftest.py  test_live_contract.py  test_smoke.py
lambda/tests/unit/: conftest.py  test_handler.py  test_vector_store.py
terraform/main/: .terraform.lock.hcl  acm.tf  apigw.tf  backend.tf  dev.tfvars.example  ec2.tf  lambda.tf  locals.tf  outputs.tf  route53.tf  terraform.tf  variables.tf
terraform/persistent/: .terraform.lock.hcl  acm.tf  backend.conf.example  backend.tf  bucket.tf  cloudfront.tf  dynamodb.tf  ebs.tf  outputs.tf  providers.tf  route53.tf  variables.tf
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
ui/src/components/: claude.tsx  my-assistant.tsx
